--- a/contact.html
+++ b/contact.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact details</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <h1>My contact details</h1>
     <table cellspacing="20">
-        <tr>My fictional address</tr><br>
-        <tr>9348983489</tr><br>
-        <tr>myemail@gmail.com</tr><br>
+        <tr>Patiala,Punjab</tr><br>
+        <tr>9877874637</tr><br>
+        <tr>princejindal200017@gmail.com</tr><br>
     </table>
     <hr>
     <form action="mailto:princejindal200017@gmail.com"method="post" >
@@ -21,9 +22,10 @@
         <input type="number" ><br>
         <label for="email">Email</label>
         <input type="email" ><br>
-        <label for="message">message</label>
-        <textarea name="message" id="" cols="30" rows="10"></textarea>
+        <label for="message">Message</label>
         <br>
+        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <br><br>
         <input type="submit">
     </form>
     
