--- a/index.html
+++ b/index.html
@@ -1,48 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Amit kumar portfolio</title>
-</head>
-<body>
-    <table cellspacing="20">
-        <tr>
-            <td> <img src="./images/9F3A9269.JPG" alt="amit kumar"></td>
-            <td>
-                <h1>Amit kumar</h1>
-                <p> <em>student</em></p><strong> <a href="">id</a></strong>
-                <p>I am learning new technologies ,I love to cook for myself</p>
-            </td>
-        </tr>
-        
-    </table>
-    <hr>
-    <h3>Books and Teachings </h3>
-    <ul>
-    <li>cpp</li>    
-    <li>ai</li>    
-    </ul>
-    <h3> work experience : fresher</h3>
-    <h3>Skills</h3>
-    <table cellspacing="30">
-       <tr>
-        <td>ios development ⭐⭐⭐⭐⭐</td>
-        <td>web development ⭐⭐⭐</td>
-       </tr>
-       <tr>
-        <td>photography ⭐⭐⭐⭐⭐</td>
-        <td>painting ⭐⭐</td>
-       </tr>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
+    <table>
+      <tr>
+        <td><img src="./images/9F3A9269.JPG" alt="amit kumar" /></td>
 
+        <td>
+          <h1>Amit kumar</h1>
+          <p><em>Student at chitkara University
+          </em></p>
+          <strong> Linked In &nbsp<a href="https://www.linkedin.com/in/amit-kumar-37784521b">click here</a></strong>
+          <p>Currently learning web development </p>
+        </td>
+      </tr>
     </table>
-    <hr>
-    <table cellspacing="20">
-        <tr>
-            <td><a href="./contact.html">Contact details</a></td>
-            <td><a href="./hobby.html">Hobbies</a></td>
-        </tr>
+    <hr />
+    <h3>Books and Teachings</h3>
+    <table>
+      <tr>
+        <td>cpp</td>
+      </tr>
+      <br />
+      <tr>
+        <td>python</td>
+      </tr>
     </table>
-</body>
+    <h3>work experience</h3>
+    <table>
+      <tr>
+        <td>Fresher</td>
+      </tr>
+    </table>
+    <h3>Skills</h3>
+    <table >
+      <tr>
+        <td>ios development 🔵🔵🔵🔵</td>
+        <td>web development 🔵🔵🔵</td>
+      </tr>
+      <tr>
+        <td>photography 🔵🔵🔵🔵🔵</td>
+        <td>painting 🔵🔵</td>
+      </tr>
+    </table>
+    <hr />
+    <table >
+      <tr>
+        <td><a href="./contact.html">Contact details</a></td>
+        <td><a href="./hobby.html">Hobbies</a></td>
+      </tr>
+    </table>
+  </body>
 </html>
